@@ -1,19 +1,16 @@
 package test;
 
-import java.util.Scanner;
-
 public class Main4 {
 
 	public static void main(String[] args) {
-		Scanner in = new Scanner(System.in);
-		String[] strs = {"a","b"};
-//		System.out.println(longestCommonPrefix(strs));
-		String aString = "11";
-		String bString = "1";
-		int a = Integer.valueOf(aString, 2);
-		int b = Integer.valueOf(bString, 2);
-		System.out.println(Integer.toBinaryString(a+b));
-	}
+	    String str = "abcdefg";
+        System.out.println(str.hashCode());
+        Integer a = new Integer(3);
+        Integer b = 3; // 将3自动装箱成Integer类型
+        int c = 3;
+        System.out.println(a == b); // false 两个引用没有引用同一对象
+        System.out.println(b == c); // true a自动拆箱成int类型再和c比较
+    }
 	public static String longestCommonPrefix(String[] strs) {
         if(strs == null || strs.length == 0)    return "";
         String pre = strs[0];
